2008-01-17  Luca Ferretti  <elle.uca@libero.it>
	
	* modulesets/gnome-2.22.modules: Removed libdaemon-newer and
	avahi-newer, no longer needed 'cause official external deps was bumped.
	Make libepc depends on plain "avahi" module.
	* modulesets/gnome-suites-2.22.modules: Added libepc to totem module
	as suggests.

2008-01-16  Elijah Newren  <newren gmail com>

	* modulesets/gnome-external-deps-2.22.modules:
	Update avahi and libdaemon; see thread at
	http://mail.gnome.org/archives/desktop-devel-list/2008-January/msg00097.html

2008-01-16  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-suites-2.22.modules: Use gtkmm 2.12 instead of 
	trunk, because GNOME 2.22 will use GTK+ 2.12, not trunk. 

2008-01-16  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml: added rdepends command documentation.

2008-01-16  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml: added sections about cmake and waf module types.

2008-01-16  Frederic Peters  <fpeters@0d.be>

	* modulesets/freedesktop-2.22.modules: added telepathy-salut.
	(closes: #459121)

2008-01-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/git.py: fixed git usage when combined with
	buildroot, patch by Sylvain Pasche.  (closes: #509468)

2008-01-16  Frederic Peters  <fpeters@0d.be>

	* Makefile.am, configure.ac: updated bug-report part of AC_INIT to
	point to Bugzilla instead of James email.  Updated with a GNOME version
	number and make dist(check) support to be nice.

2008-01-16  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml, doc/C/figures/jhbuild_sample_dot_output.png,
	doc/Makefile.am: added a figure with sample output from the dot
	command.

2008-01-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/moduleset.py: fixed dot command to work with latest Tarball
	changes.

2008-01-16  Frederic Crozat  <fcrozat@mandriva.com>

	* modulesets/gnome-external-deps-2.22.modules:
	Bump system-tools-backends version to 2.5.6.

2008-01-16  Frederic Peters  <fpeters@0d.be>
