@@ -38,8 +38,8 @@ class CMakeModule(Package):
     STATE_BUILD = 'build'
     STATE_INSTALL = 'install'
 
-    def __init__(self, name, branch, dependencies=[], after=[]):
-        Package.__init__(self, name, dependencies, after)
+    def __init__(self, name, branch, dependencies=[], after=[], suggests=[]):
+        Package.__init__(self, name, dependencies, after, suggests)
         self.branch = branch
 
     def get_srcdir(self, buildscript):
@@ -119,13 +119,13 @@ class CMakeModule(Package):
 
 def parse_cmake(node, config, uri, repositories, default_repo):
     id = node.getAttribute('id')
-    dependencies, after = get_dependencies(node)
+    dependencies, after, suggests = get_dependencies(node)
     branch = get_branch(node, repositories, default_repo)
 
     if config.module_checkout_mode.get(id):
         branch.checkout_mode = config.module_checkout_mode[id]
 
-    return CMakeModule(id, branch, dependencies=dependencies, after=after)
+    return CMakeModule(id, branch, dependencies=dependencies, after=after, suggests=suggests)
 
 register_module_type('cmake', parse_cmake)
 
