@@ -40,8 +40,8 @@ class PerlModule(Package):
     STATE_INSTALL = 'install'
 
     def __init__(self, name, branch, makeargs='',
-                 dependencies=[], after=[]):
-        Package.__init__(self, name, dependencies, after)
+                 dependencies=[], after=[], suggests=[]):
+        Package.__init__(self, name, dependencies, after, suggests)
         self.branch = branch
         self.makeargs = makeargs
 
@@ -121,12 +121,13 @@ def parse_perl(node, config, uri, repositories, default_repo):
     p = re.compile('(\${prefix})')
     makeargs = p.sub(config.prefix, makeargs)
     
-    dependencies, after = get_dependencies(node)
+    dependencies, after, suggests = get_dependencies(node)
     branch = get_branch(node, repositories, default_repo)
     if config.module_checkout_mode.get(id):
         branch.checkout_mode = config.module_checkout_mode[id]
 
     return PerlModule(id, branch, makeargs,
-                         dependencies=dependencies, after=after)
+            dependencies=dependencies, after=after,
+            suggests=suggests)
 register_module_type('perl', parse_perl)
 
