@@ -258,8 +258,10 @@
             md5sum="a585677188cd56a090c4dc3357e03a95" size="1292971"/>
     <dependencies>
       <dep package="cairo"/>
-      <dep package="poppler-data"/>
     </dependencies>
+    <suggests>
+      <dep package="poppler-data"/>
+    </suggests>
     <after>
       <dep package="gtk+"/>
     </after>
