@@ -1,3 +1,15 @@
+2008-01-17  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/modtypes/__init__.py, jhbuild/modtypes/autotools.py,
+	jhbuild/modtypes/cmake.py, jhbuild/modtypes/distutils.py,
+	jhbuild/modtypes/linux.py, jhbuild/modtypes/mesa.py,
+	jhbuild/modtypes/mozillamodule.py, jhbuild/modtypes/perl.py,
+	jhbuild/modtypes/tarball.py, jhbuild/modtypes/testmodule.py,
+	jhbuild/modtypes/waf.py, jhbuild/moduleset.py,
+	modulesets/gnome-external-deps-2.22.modules: updated <suggests>
+	semantic to add the module if it is available, moved poppler-data from
+	dependency to suggest of poppler.
+
 2008-01-17  Luca Ferretti  <elle.uca@libero.it>
 	
 	* modulesets/gnome-2.22.modules: Removed libdaemon-newer and
